--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,7 +2,7 @@ body {
   font-family: "Helvetica Neue", sans-serif;
 }
 h1 {
-  color: #ff0000;
+  /* color: #ff0000; */
   font-size: 1.5rem;
   text-transform: uppercase;
   font-weight: normal;
